--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,5 @@
   "dockerComposeFile": "docker-compose.yml",
   "service": "development",
   "forwardPorts": [8080],
-  "postCreateCommand": "yarn install && yarn cy install"
+  "postCreateCommand": "pnpm install && pnpm exec playwright install"
 }
