--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "name": "cypress-codespaces-example",
+  "name": "playwright-codespaces-example",
   "repository": "https://github.com/AriPerkkio/cypress-codespaces-example",
   "license": "MIT",
   "scripts": {
-    "cy": "cypress"
+    "test": "vitest"
   },
   "devDependencies": {
-    "cypress": "^8.7.0"
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@vitest/browser": "^3.1.1",
+    "playwright": "^1.51.1",
+    "vitest": "^3.1.1"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
